# internal/modules/segments/handler.go
@@ -15,15 +15,15 @@ func NewHandler(service *Service) *Handler {
 	return &Handler{service: service}
 }
 
-// @Summary Create a new segment
-// @Description Create a new segment with the given slug
-// @Accept json
-// @Produce json
-// @Param request body CreateSegmentRequest true "Segment request payload"
-// @Success 200 {string} string "OK"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /segments [post]
+// @Summary		Create a new segment
+// @Description	Create a new segment with the given slug
+// @Accept			json
+// @Produce		json
+// @Param			request	body		CreateSegmentRequest	true	"Segment request payload"
+// @Success		200		{string}	string					"OK"
+// @Failure		400		{string}	string					"Bad Request"
+// @Failure		500		{string}	string					"Internal Server Error"
+// @Router			/api/segments [post]
 func (h *Handler) Create(c echo.Context) error {
 	req, err := echox.Bind[CreateSegmentRequest](c)
 	if err != nil {
@@ -37,15 +37,15 @@ func (h *Handler) Create(c echo.Context) error {
 	return h.service.Create(c.Request().Context(), segment)
 }
 
-// @Summary Delete a segment
-// @Description Delete a segment by slug
-// @Accept json
-// @Produce json
-// @Param request body DeleteSegmentRequest true "Segment request payload"
-// @Success 200 {string} string "OK"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /segments [delete]
+// @Summary		Delete a segment
+// @Description	Delete a segment by slug
+// @Accept			json
+// @Produce		json
+// @Param			request	body		DeleteSegmentRequest	true	"Segment request payload"
+// @Success		200		{string}	string					"OK"
+// @Failure		400		{string}	string					"Bad Request"
+// @Failure		500		{string}	string					"Internal Server Error"
+// @Router			/api/segments [delete]
 func (h *Handler) Delete(c echo.Context) error {
 	req, err := echox.Bind[DeleteSegmentRequest](c)
 	if err != nil {
@@ -55,15 +55,15 @@ func (h *Handler) Delete(c echo.Context) error {
 	return h.service.Delete(c.Request().Context(), req.Slug)
 }
 
-// @Summary Get segments by user ID
-// @Description Get segments by user ID
-// @Accept json
-// @Produce json
-// @Param request body GetUserSegmentsRequest true "User segments request payload"
-// @Success 200 {object} GetUserSegmentsResponse "OK"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /segments [get]
+// @Summary		Get segments by user ID
+// @Description	Get segments by user ID
+// @Accept			json
+// @Produce		json
+// @Param			userID	path		int						true	"User ID"
+// @Success		200		{object}	GetUserSegmentsResponse	"OK"
+// @Failure		400		{string}	string					"Bad Request"
+// @Failure		500		{string}	string					"Internal Server Error"
+// @Router			/api/segments/{userID} [get]
 func (h *Handler) GetByUserID(c echo.Context) error {
 	req, err := echox.Bind[GetUserSegmentsRequest](c)
 	if err != nil {
@@ -82,15 +82,17 @@ func (h *Handler) GetByUserID(c echo.Context) error {
 	return c.JSON(http.StatusOK, res)
 }
 
-// @Summary Update segments by user ID
-// @Description Update segments by user ID
-// @Accept json
-// @Produce json
-// @Param request body UpdateUserSegmentsRequest true "User segments request payload"
-// @Success 200 {object} GetUserSegmentsResponse "OK"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /segments [post]
+// @Summary		Update segments by user ID
+// @Description	Update segments by user ID
+// @Accept			json
+// @Produce		json
+// @Param			userID			path		int						true	"User ID"
+// @Param			add_segments	body		[]string				false	"Segments to add"
+// @Param			delete_segments	body		[]string				false	"Segments to delete"
+// @Success		200				{object}	GetUserSegmentsResponse	"OK"
+// @Failure		400				{string}	string					"Bad Request"
+// @Failure		500				{string}	string					"Internal Server Error"
+// @Router			/api/segments/{userID} [put]
 func (h *Handler) UpdateSegmentsByUserID(c echo.Context) error {
 	req, err := echox.Bind[UpdateUserSegmentsRequest](c)
 	if err != nil {
